[enh] improve lisibility and avoid overlapping in ffdn section

--- a/css/style.css
+++ b/css/style.css
@@ -398,15 +398,23 @@ section.bigfat {
     background-size: contain;
 }
 
-#ffdn.ffdn {
+#ffdn-text {
     padding:03% 0 0 0;
 }
 
-.ffdn .slogan h3 {
-    color: #fff;
-    text-shadow: -1px 1px 3px #000;
-    font-size: 2.71em;
+#ffdn {
+    min-height: 8em;
+}
+
+.ffdn-text .slogan h3 {
+    font-size: 2.31em;
     text-transform: none;
+    text-align: center;
+}
+
+.ffdn-text .slogan h4 {
+    text-transform: none;
+    text-align: center;
 }
 
 /* ===========================
